// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`description.graphql format 1`] = `
====================================options=====================================
parsers: ["graphql"]
                                                      printWidth: 80 (default) |
=====================================input======================================
"sigleline description"
enum E1 { A }

"""
multiline
description
"""
enum E2 { A }

=====================================output=====================================
"sigleline description"
enum E1 {
  A
}

"""
multiline
description
"""
enum E2 {
  A
}

================================================================================
`;

exports[`enum.graphql format 1`] = `
====================================options=====================================
parsers: ["graphql"]
                                                      printWidth: 80 (default) |
=====================================input======================================
enum State {
  PENDING
  VISIBLE
  ARCHIVED
}

=====================================output=====================================
enum State {
  PENDING
  VISIBLE
  ARCHIVED
}

================================================================================
`;
